Converted JavaSandbox to a Maven project.  Added some unit tests for Collection class concepts.  Fixed one unit test defect so that all unit tests now pass.